k8s/postgres-operator.yml
apiVersion: v1
kind: Namespace
metadata:
  name: pgo
