k8s/changelog.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
  namespace: prod-2020-07
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: cert-manager-webhook-dnsimple-production
    external-dns.alpha.kubernetes.io/ttl: "60"
    service.beta.kubernetes.io/linode-loadbalancer-proxy-protocol: v2
spec:
  tls:
  - hosts:
    - changelog.com
    - www.changelog.com
    - 2020.changelog.com
    secretName: wildcard-acme-tls
  - hosts:
    - brainscience.fm
    secretName: brainscience-fm-acme-tls
  - hosts:
    - changelog.fm
    secretName: changelog-fm-acme-tls
  - hosts:
    - founderstalk.fm
    secretName: founderstalk-fm-acme-tls
  - hosts:
    - gotime.fm
    secretName: gotime-fm-acme-tls
  - hosts:
    - jsparty.fm
    secretName: jsparty-fm-acme-tls
  - hosts:
    - practicalai.fm
    secretName: practicalai-fm-acme-tls
  rules:
  - host: changelog.com
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 4000
  - host: www.changelog.com
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 4000
  - host: 2020.changelog.com
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 4000
  - host: brainscience.fm
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 4000
  - host: changelog.fm
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 4000
  - host: founderstalk.fm
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 4000
  - host: gotime.fm
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 4000
  - host: jsparty.fm
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 4000
  - host: practicalai.fm
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: prod-2020-07
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "4000"
spec:
  ports:
  - name: http
    port: 4000
    protocol: TCP
    targetPort: 4000
  selector:
    app: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: prod-2020-07
  labels:
    app: app
    keel.sh/policy: force
    keel.sh/match-tag: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - app
            topologyKey: kubernetes.io/hostname
      containers:
      - name: db-backup
        image: thechangelog/backups:202008
        imagePullPolicy: Always
        command:
        - /usr/local/bin/backup_db_continuously
      - name: uploads-backup
        image: thechangelog/backups:202008
        imagePullPolicy: Always
        command:
        - /usr/local/bin/backup_uploads_continuously
        volumeMounts:
        - mountPath: /uploads
          name: uploads
      - name: app
        image: thechangelog/changelog.com:latest
        imagePullPolicy: Always
        ports:
        - name: phoenix
          containerPort: 4000
        resources:
          limits:
            cpu: 4
            memory: 8Gi
          requests:
            cpu: 2
            memory: 2Gi
        readinessProbe:
          httpGet:
            path: /health
            port: phoenix
            httpHeaders:
            - name: Host
              value: 127.0.0.1
          periodSeconds: 15
          timeoutSeconds: 14
        startupProbe:
          httpGet:
            path: /health
            port: phoenix
            httpHeaders:
            - name: Host
              value: 127.0.0.1
          failureThreshold: 30
          periodSeconds: 10
        volumeMounts:
        - mountPath: /app/priv/uploads
          name: uploads
      volumes:
      - name: uploads
        persistentVolumeClaim:
          claimName: uploads
