k8s/metrics-changelog.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: metrics-changelog
  namespace: metrics
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - metrics.changelog.com
    secretName: metrics-changelog-acme-tls
  rules:
  - host: metrics.changelog.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: http
