k8s/ten-changelog.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ten-changelog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ten-changelog
  namespace: ten-changelog
  labels:
    app: ten-changelog
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ten-changelog
  template:
    metadata:
      labels:
        app: ten-changelog
    spec:
      containers:
      - image: thechangelog/ten:2019-11-01T10.10.10Z
        ports:
        - name: http
          containerPort: 80
        name: ten-changelog
        readinessProbe:
          tcpSocket:
            port: http
          periodSeconds: 5
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ten-changelog
  namespace: ten-changelog
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  tls:
  - hosts:
    - ten.changelog.com
    secretName: ten-changelog-acme-tls
  rules:
  - host: ten.changelog.com
    http:
      paths:
      - backend:
          serviceName: ten-changelog
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ten-changelog
  namespace: ten-changelog
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ten-changelog
